[package]
name = "moonshine"
version = "0.1.6"
description = "Distill thoughts into aged knowledge."
authors = ["JangVincent"]
repository = "https://github.com/JangVincent/Moonshine"
homepage = "https://github.com/JangVincent/Moonshine"
license = "MIT"
edition = "2021"

[lib]
name = "moonshine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bcrypt = "0.17"
tokio = { version = "1", features = ["time", "sync", "macros"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
